# DamageScanner

./: CMakeLists.txt  CalcDamage.cpp  CalcDamage.hpp  README.md  Types.hpp
